<resources>
    <string name="app_name">JFood</string>
    <string name="login">LOGIN</string>
    <string name="jfood">JFood</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register_now">Register Now</string>
    <string name="name">Name</string>
    <string name="text_view">Text View</string>
    <string name="total_price">Total Price</string>
    <string name="payment_method">Payment Method</string>
    <string name="food_category">Food Category</string>
    <string name="textview">TextView</string>
    <string name="food_price">Food Price</string>
    <string name="register">REGISTER</string>
    <string name="food_name">Food Name</string>
    <string name="page_title">JFood</string>
    <string name="signOut">Sign out</string>
    <string name="content_description_more">Sign Out</string>
    <string name="history">History</string>
    <string name="pesanan">Orders</string>
</resources>