<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignWithParentIfMissing="false"
    android:layout_alignParentStart="false"
    android:layout_alignParentTop="false"
    android:layout_alignParentEnd="false"
    android:layout_alignParentBottom="false"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:paddingStart="8dp"
    android:paddingLeft="8dp"
    android:paddingTop="8dp"
    android:paddingEnd="8dp"
    android:paddingRight="8dp"
    android:paddingBottom="8dp"
    tools:context=".BuatPesananActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/pesanan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="Order"
                    android:textSize="30sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/staticFoodName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="85dp"
                    android:text="Food Name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/food_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="160dp"
                    android:layout_marginTop="85dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/food_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/staticFoodName"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticFoodName" />

                <TextView
                    android:id="@+id/staticCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="Food Category"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view"/>


            <TextView
                android:id="@+id/food_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="136dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/food_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/staticCategory"
                app:layout_constraintTop_toTopOf="@id/view" />

            <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticCategory" />


                <View
                    android:id="@+id/view3"
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticPrice" />

                <TextView
                    android:id="@+id/food_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="160dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/food_price"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/staticPrice"
                    app:layout_constraintTop_toTopOf="@id/view2" />

                <TextView
                    android:id="@+id/staticPayMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:text="Payment Method"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view3" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticPayMethod">

                    <RadioButton
                        android:id="@+id/cash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text="Via CASH" />

                    <RadioButton
                        android:id="@+id/cashless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:text="Via CASHLESS" />

                </RadioGroup>


                <View
                    android:id="@+id/view4"
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <TextView
                    android:id="@+id/textCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="28dp"
                    android:text="Promo Code"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view4" />

                <EditText
                    android:id="@+id/promo_code"
                    android:layout_width="97dp"
                    android:layout_height="43dp"
                    android:layout_weight="1"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:ems="10"
                    android:hint="Promo Code"
                    android:inputType="text"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toEndOf="@+id/textCode"
                    app:layout_constraintTop_toTopOf="@id/view4" />

                <TextView
                    android:id="@+id/total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="180dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/total_price"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.7"
                    app:layout_constraintStart_toEndOf="@+id/staticTotalPrice"
                    app:layout_constraintTop_toTopOf="@id/view5" />

                <TextView
                    android:id="@+id/staticTotalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    android:text="Total Price"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view5" />

                <Button
                    android:id="@+id/btnPesan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:elevation="2dp"
                    android:text="Order"
                    android:textColor="#000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view6"
                    app:layout_constraintVertical_bias="0.737" />


                <View
                    android:id="@+id/view5"
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <View
                    android:id="@+id/view6"
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticTotalPrice" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.784"
                    app:layout_constraintStart_toEndOf="@+id/radioGroup"
                    app:layout_constraintTop_toBottomOf="@+id/staticPayMethod">

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/hitung"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:elevation="2dp"
                    android:text="Count"
                    android:textColor="#000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view6"
                    app:layout_constraintVertical_bias="0.311" />

                <TextView
                    android:id="@+id/staticPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="Food Price"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>